image path changed in json

--- a/utils/projects.json
+++ b/utils/projects.json
@@ -4,6 +4,6 @@
         "information" : "Meta Africa Sports is an elite sports brand that educates and develops current and future sports professionals of our community. We strive to use the power of sports and athletics to connect individuals from all around the globe and provide a platform for sports fans to achieve and share their personal goals.",
         "technoloy" : "HTML-SCSS-JS-JSON",
         "link" : "https://meta-africa-git-features-abhijitturate.vercel.app/",
-        "image" : "meta_africa.png"
+        "image" : "./utils/meta_africa.png"
     }
 ]
